# netgauge

./: .mcp.json  CONTRIBUTING.md  README.md
.claude/: settings.json
.github/workflows/: e2e-test.yaml  golangci-lint.yaml  python-lint.yaml  trafficgen-test.yaml
collector/: Dockerfile  dpdk-port-stats.py  dpdk-telemetry.py  requirements.txt
dpdk-metrics-agent/: Dockerfile  README.md  dpdk-telemetry.py  requirements.txt
dpdk-metrics-collector/: README.md  dpdk-telemetry.py
manifests/open-telemetry/: otel-collector-config.yaml
manifests/single-node-openshift/: README.md  cm-otel-collector-config.yaml  namespace.yaml  performance-profile.yaml  pod-dpdk-telemetry-otlp.yaml  pod-dpdk-telemetry.yaml  pod-hwlatdetect.yaml  pod-opentelemetry-collector.yaml  pod-testpmd.yaml  prometheus-svc-monitor.yaml  service-dpdk-telemetry.yaml  service-opentelemetry-collector.yaml  service-testpmd.yaml  sub-sriov.yaml  (+2 more)
rfc2544/: Dockerfile  MCP_README.md  README.md  auto_client.yaml.tmpl  client.py  demo_mcp_usage.py  mcp_config.json  mcp_requirements.txt  mcp_server.py  rest.py  rest_schema.py  run_mcp_server.sh  test_mcp_server.py  trafficgen_entry.sh
rfc2544/mcp/: MCP_README.md  MIGRATION_SUMMARY.md  README.md  http_mcp_server.py  main.py  mcp_config.json  mcp_requirements.txt  mcp_server.py  pyproject.toml  run_mcp_server.sh  test_fastmcp.py  test_server_startup.py  test_sse_client.py
rfc2544/mcp/src/rfc2544_mcp/: __init__.py  __main__.py  cli.py  server.py
testpmd/: Dockerfile  Dockerfile-dpdk-build  Dockerfile-from-source  Dockerfile-micro  README.md  go.mod  go.sum
(+15 files in other folders)
